[project]
name = "bindhack"
version = "0.1.0"
description = "BindHack: InSilico PPI Hackathon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "biopython>=1.86",
  "biotite>=1.5.0",
  "optuna>=4.5.0",
  "polars>=1.35.1",
  "scikit-learn>=1.7.2",
  "torch>=2.7.0",
  "transformers>=4.57.1",
  "xgboost>=3.1.1",
]
authors = [
  { name = "Andrew Aiginin" },
  { name = "Simon Konnov" },
  { name = "Ilia Bushmakin" }
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.14.3",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
